# complex-processses-and-systems

./: CMakeLists.txt  Host.cpp  Host.h  library.cpp  library.h  main.cpp  report_rk6_32m_emelyanenkosv_lab1.docx  results.ipynb
lib_1_SVEmelyanenko_Euler/: lib_1_SVEmelyanenko_Euler.cpp  lib_1_SVEmelyanenko_Euler.h
lib_1_SVEmelyanenko_Huhne/: lib_1_SVEmelyanenko_Huhne.cpp  lib_1_SVEmelyanenko_Huhne.h
prj_1_SVEmelyanenko_Host/: Host.cpp  Host.h  prj_1_SVEmelyanenko_Host.cpp
